# django-cute-status

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
django_cute_status/: __init__.py  apps.py  middleware.py
django_cute_status/conf/: __init__.py  defaults.py
django_cute_status/templates/django_cute_status/: base.html
tests/: settings.py  test_middleware.py  urls.py  views.py
