[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-cute-status"
version = "1.1.0"
description = "A django application to display cute animal pictures based on HTTP status codes."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Abhyudai"},
]
license-files = ["LICENSE"]
keywords = ["django", "dogs", "status-codes", "status"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-django",
    "pytest-randomly",
    "coverage",
]

[project.urls]
Documentation = "https://github.com/abhiabhi94/django-cute-status"
"Source Code" = "https://github.com/abhiabhi94/django-cute-status"
Homepage = "https://github.com/abhiabhi94/django-cute-status"

[tool.hatch.build.targets.wheel]
packages = ["django_cute_status"]
include = [
    "django_cute_status/templates/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "django_cute_status/",
    "README.rst",
    "LICENSE",
    "CHANGELOG.rst",
    "pyproject.toml"
]

[tool.isort]
known_third_party = ["django"]

[tool.coverage.run]
branch = true
source = ["django_cute_status"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
django_find_project = false
addopts = "-p no:doctest --ds=tests.settings --reuse-db"
