[metadata]
name = django-cute-status
version = 1.0.0
author = Abhyudai
author_email =
description = A django application to display cute animal pictures based on HTTP status codes.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/abhiabhi94/django-status-dogs
license = MIT
license_file = LICENSE
project_urls =
    Documentation=https://github.com/abhiabhi94/django-status-dogs
    Source Code=https://github.com/abhiabhi94/django-status-dogs
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
keywords = django dogs status-codes status

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires = django
zip_safe = False

[options.packages.find]
exclude =
    docs
    test*

[flake8]
max-line-length = 120
exclude = .tox,.git
extend-ignore =
    E203, E231,

[coverage:run]
branch = true
source =
    django_cute_status

[coverage:report]
show_missing = true
skip_covered = true

[tool:pytest]
django_find_project = false
addopts = -p no:doctest
    --ds=tests.settings
    --reuse-db
